--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -78,14 +78,11 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config Release --target ALL_BUILD
     
     - name: Get Additional Dependencies
-      # Make a copy of 7z.exe and 7z.dll
+      # Make a copy of 7z.exe
       run: |
         cd mk/windoze
-        $7zPath = $(Get-Command 7z).Source | Split-Path
-        $dllPath = Join-Path $7zPath 7z.dll
-        $exePath = Join-Path $7zPath 7z.exe
-        cp $dllPath .
-        cp $exePath .
+        $7zPath = $(Get-Command 7z).Source
+        cp $7zPath .
         cd ../..
       
     - name: Create Mega Glest Snapshot
@@ -94,7 +91,6 @@ jobs:
         name: megaglest-x64-snapshot
         path: |
           mk/windoze/*.exe
-          mk/windoze/*.dll
           mk/windoze/glest.ini
           mk/shared/*.ini
 
